# snppis

./: .flake8  .gitignore  .travis.yml  README.md  README.rst  setup.cfg  snppis.R  tox.ini
src/snppis/: __init__.py  __main__.py  api.py  cli.py  constants.py  generate_mappings.py  lookup_predictions.py  pipeline.py  report_impactful.py
src/snppis/mappings/: kegg.tsv  reactome.json  reactome.tsv  reactome_snp_scores.json  wikipathways.json  wikipathways.tsv  wikipathways_snp_scores.json
src/snppis/resources/mappings/: kegg.json  kegg_snp_scores.json
