##########################
# Setup.py Configuration #
##########################
[metadata]
name = snppis
version = 0.0.1-dev
description = Get SNP pathway impact scores
long_description = file: README.rst

url = https://github.com/snp2k/snppis

license = MIT
license_file = LICENSE

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

[options]
install_requires =
    myvariant
    pandas
    click

python_requires = >=3.7
packages = find:
package_dir =
    = src
zip-safe = false

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    snppis = snppis.cli:main
