##########################
# Setup.py Configuration #
##########################
[metadata]
name = snppis
version = 0.0.1-dev
description = Get SNP pathway impact scores
long_description = file: README.rst

url = https://github.com/snp2k/snppis

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Genomics
    Machine Learning
    Data Mining

[options]
install_requires =
    myvariant
    pandas
    click
    tqdm

python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    snppis = snppis.cli:main
